add quotes in title and summary

--- a/_notebooks/2021-06-10-Intro-mlforecast.ipynb
+++ b/_notebooks/2021-06-10-Intro-mlforecast.ipynb
@@ -5,8 +5,8 @@
    "id": "64b42c13-e675-4b91-9b07-1c6c6deb4e2e",
    "metadata": {},
    "source": [
-    "# Forecasting with Machine Learning models\n",
-    "> **mlforecast** makes forecasting with machine learning models easy.\n",
+    "# \"Forecasting with Machine Learning models\"\n",
+    "> \"**mlforecast** makes forecasting with machine learning models easy.\"\n",
     "\n",
     "- toc: true\n",
     "- branch: main\n",
