notebook fixes. config changes

--- a/_notebooks/2021-06-10-Intro-mlforecast.ipynb
+++ b/_notebooks/2021-06-10-Intro-mlforecast.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# \"Forecasting with Machine Learning models\"\n",
-    "> \"**mlforecast** makes forecasting with machine learning models easy.\"\n",
+    "> \"mlforecast makes forecasting with machine learning models easy\"\n",
     "\n",
     "- toc: true\n",
     "- branch: main\n",
@@ -787,57 +787,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e71e9a3-14c2-4817-9f0c-27c97879747f",
+   "id": "7acb4dbc-dcb6-4109-9def-d702ba139234",
    "metadata": {},
    "source": [
     "With these problems in mind I created [mlforecast](https://github.com/Nixtla/mlforecast), which is a framework to help you forecast time series using machine learning models. It takes care of all the details for you, you just need to give it a model and which features you want to use and let it do the rest.\n",
     "\n",
-    "**mlforecast** is available in [PyPI](https://pypi.org/project/mlforecast/)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "0ad68ee4-2854-4745-bdac-5b562c7ef64f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-10T21:32:13.850549Z",
-     "iopub.status.busy": "2021-06-10T21:32:13.850381Z",
-     "iopub.status.idle": "2021-06-10T21:32:13.929055Z",
-     "shell.execute_reply": "2021-06-10T21:32:13.928421Z",
-     "shell.execute_reply.started": "2021-06-10T21:32:13.850532Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#!pip install mlforecast"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f617290-eeb3-4ab8-bdfc-c1fc981441bc",
-   "metadata": {},
-   "source": [
-    "As well as [conda-forge](https://anaconda.org/conda-forge/mlforecast)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9615fbfe-28a2-4a7d-ae9d-13f98c7656b2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-06-10T21:32:13.929911Z",
-     "iopub.status.busy": "2021-06-10T21:32:13.929760Z",
-     "iopub.status.idle": "2021-06-10T21:32:14.014438Z",
-     "shell.execute_reply": "2021-06-10T21:32:14.012906Z",
-     "shell.execute_reply.started": "2021-06-10T21:32:13.929893Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#!conda install -c conda-forge mlforecast"
+    "**mlforecast** is available in [PyPI](https://pypi.org/project/mlforecast/) (`pip install mlforecast`) as well as [conda-forge](https://anaconda.org/conda-forge/mlforecast) (`conda install -c conda-forge mlforecast`)"
    ]
   },
   {
