update esrnn blog

--- a/_notebooks/2021-06-25-esrnn-i.ipynb
+++ b/_notebooks/2021-06-25-esrnn-i.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# \"Replicating ESRNN results with `nixtlats` (I): M4 Yearly dataset\"\n",
-    "> \"Deep Learning for Time Series Forecasting\""
+    "> [nikstla] (noun, nahuatl) Period of time."
    ]
   },
   {
@@ -15,6 +15,7 @@
     "- toc: true\n",
     "- branch: main\n",
     "- badges: true\n",
+    "- hide_binder_badge: true\n",
     "- comments: true\n",
     "- author: Federico Garza\n",
     "- categories: [deep learning, forecasting, M4]\n",
@@ -25,7 +26,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this post we introduce `nixtlats`: a library of state-of-the-art deep learning models for time series forecasting written in pytorch, focused on usability and replicability. In this first post we introduce the Exponential Smoothing with Recurrent Neural Networks ([ESRNN](https://www.sciencedirect.com/science/article/abs/pii/S0169207019301153)) model, winner of the [M4 time series competition](https://www.researchgate.net/publication/325901666_The_M4_Competition_Results_findings_conclusion_and_way_forward) and show that our implementation achieves similar performance to the original submission. Throughout the post we describe the pipeline for training the models using `nixtlats` and also a brief description of the datasets included in the library. This work is inspired by an [earlier implementation of ESRNN in pytorch](https://medium.com/analytics-vidhya/forecasting-in-python-with-esrnn-model-75f7fae1d242)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Install `nixtlats`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `nixtltats` library is available in [pip](https://pypi.org/project/nixtlats/) so to install it just use:"
    ]
   },
   {
@@ -36,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "#!pip install nixtlats"
+    "!pip install nixtlats"
    ]
   },
   {
@@ -110,14 +132,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import Yearly data"
+    "## Import M4 Yearly data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nixtlats provides functions to download and manipulate M4 data. The `M4.load` method returns train and test sets."
+    "The `nixtlats` library provides functions to download and manipulate M4 data. The `M4.load` method returns train and test sets. The library also provides a wide variety of datasets, [see the documentation](https://nixtla.github.io/nixtlats). "
    ]
   },
   {
@@ -188,6 +210,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The pipeline for model training follows the logic of deep learning practices. In the first instance a `Dataset` must be instantiated. The `TimeSeriesDataset` class allows to return the complete series in each iteration, this is useful for recurrent models such as ESRNN. To be instantiated, the class receives the target series `Y_df` as a pandas dataframe with columns `unique_id`, `ds` and `y`. Additionally, temporary exogenous variables `X_df` and static variables `S_df` can be included. In this case we only use static variables as in the original model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -214,6 +243,13 @@
    "metadata": {},
    "source": [
     "## Define Time Series Loaders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the training and test `TimeSeriesDatasets` are defined, the loaders must be instantiated through `TimeSeriesLoader` which is a wrapper of the pytorch's `DataLoader`, so it can receive all the original arguments."
    ]
   },
   {
@@ -244,6 +280,13 @@
    "metadata": {},
    "source": [
     "## Define ESRNN model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The instantiation of the model is carried out as follows. For an overview of all parameters [see the documentation](https://github.com/Nixtla/nixtlats/blob/master/nixtlats/models/esrnn/esrnn.py#L464)."
    ]
   },
   {
@@ -279,14 +322,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trai model"
+    "## Train model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add `gpu = 1` for GPU training using colab."
+    "The `nixtlats` library is designed to operate with [`pytorch-lightning`](https://www.pytorchlightning.ai/) so that all its functionalities can be used. Add `gpus = 1` for GPU training using colab."
    ]
   },
   {
@@ -366,6 +409,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ESRNN model returns for each test batch three elements: `y`, the test values `y_hat` and the mask `mask`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -427,6 +477,13 @@
    "metadata": {},
    "source": [
     "## Evaluate results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An M4 performance evaluator function is included within `nixtlats` to facilitate the reproduction of the results."
    ]
   },
   {
@@ -493,6 +550,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition, the results of the original submissions can be evaluated as follows. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -555,6 +619,20 @@
    ],
    "source": [
     "M4Evaluation.evaluate('data', 'Yearly', esrnn_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this post we present `nixtlats`, a time series forecasting library using deep learning. As can be seen for the case of `Yearly` in `M4` the results are similar to those obtained by the original implementation. These results are encouraging because the ensembles of different models used by the original implementation were not considered."
    ]
   }
  ],
