--- a/_notebooks/2021-06-25-esrnn-i.ipynb
+++ b/_notebooks/2021-06-25-esrnn-i.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# \"Replicating ESRNN results with `nixtlats` (I): M4 Yearly dataset\"\n",
-    "> [nikstla] (noun, nahuatl) Period of time."
+    "> \"[nikstla] (noun, nahuatl) Period of time.\""
    ]
   },
   {
