--- a/_notebooks/2021-06-25-esrnn-i.ipynb
+++ b/_notebooks/2021-06-25-esrnn-i.ipynb
@@ -5,13 +5,8 @@
    "metadata": {},
    "source": [
     "# \"Replicating ESRNN results with `nixtlats` (I): M4 Yearly dataset\"\n",
-    "> \"[nikstla] (noun, nahuatl) Period of time.\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "> \"[nikstla] (noun, nahuatl) Period of time.\"\n",
+    "\n",
     "- toc: true\n",
     "- branch: main\n",
     "- badges: true\n",
