--- a/_notebooks/2021-06-25-esrnn-i.ipynb
+++ b/_notebooks/2021-06-25-esrnn-i.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Replicating ESRNN results with `nixtlats` (I): M4 Yearly dataset\"\n",
+    "# \"Replicating ESRNN results with nixtlats (I): M4 Yearly dataset\"\n",
     "> \"[nikstla] (noun, nahuatl) Period of time.\"\n",
     "\n",
     "- toc: true\n",
