add repo reference2

--- a/_notebooks/2021-06-25-esrnn-i.ipynb
+++ b/_notebooks/2021-06-25-esrnn-i.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `nixtltats` library is available in [pip](https://pypi.org/project/nixtlats/) so to install it just use:"
+    "The `nixtlats` library is available in [pip](https://pypi.org/project/nixtlats/) so to install it just use:"
    ]
   },
   {
@@ -628,6 +628,20 @@
    "metadata": {},
    "source": [
     "In this post we present `nixtlats`, a time series forecasting library using deep learning. As can be seen for the case of `Yearly` in `M4` the results are similar to those obtained by the original implementation. These results are encouraging because the ensembles of different models used by the original implementation were not considered."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to contribute"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The full code is publicly available at [github](https://github.com/Nixtla/nixtlats). To contribute you can fork this repository and make a PR with your improvements. You can also create issues if you have problems running the model."
    ]
   }
  ],
