Style and Typos

--- a/_notebooks/2021-06-10-Intro-mlforecast.ipynb
+++ b/_notebooks/2021-06-10-Intro-mlforecast.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In this post I'll talk about using machine learning models in forecasting tasks. I'll use an example to show what the main challanges are and then I'll introduce [mlforecast](https://github.com/Nixtla/mlforecast), a framework that facilitates using machine learning models in forecasting. **mlforecast** does the feature engineering and takes care of the updates for you, you only have to provide a regressor that follows the scikit-learn API (implements fit and predict) and specify the features that you want to use which can be lags, lag-based transformations and date features."
+    "We at Nixlta, are trying to make time series forecasting more accesible to everyone. In this post I'll talk about using machine learning models in forecasting tasks. I'll use an example to show what the main challanges are and then I'll introduce [mlforecast](https://github.com/Nixtla/mlforecast), a framework that facilitates using machine learning models in forecasting. **mlforecast** does feature engineering and takes care of the updates for you, the user only has to provide a regressor that follows the scikit-learn API (implements fit and predict) and specify the features that she wants to use. These features can be lags, lag-based transformations and date features. (For further feature creation or an automated forecasting pipeline check [fasttsfeatures](https://github.com/Nixtla/fasttsfeatures) and [autotimeseries](https://github.com/Nixtla/autotimeseries)"
    ],
    "metadata": {}
   },
@@ -40,13 +40,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "For many years classical methods like ARIMA and ETS dominated the forecasting field. One of the reasons was that most of the use cases involved forecasting low frequency series like monthly, quarterly or yearly. Furthermore, there weren't many distinct time series to forecast, so fitting a single model to each one and getting forecasts from them was straightforward.\n",
+    "For many years classical methods like ARIMA and ETS dominated the forecasting field. One of the reasons was that most of the use cases involved forecasting low-frequency series with monthly, quarterly or yearly granularity.  Furthermore, there weren't many time-series datasets, so fitting a single model to each one and getting forecasts from them was straightforward.\n",
     "\n",
-    "In recent years, there has been a rise in the need to forecast more time series and with higher frequencies. This imposes a challenge because classical methods aren't mean to model several time series together, so using them is suboptimal because it takes more time (you have to train many models) and there could be some common patterns between the series that could be learned by modeling them together.\n",
+    "However, in recent years, the need to forecast bigger datasets higher frequencies has risen. Bigger and higher frequency time series imposes a challenge for classical forecasting methods. Those methods aren't mean to model many time series together, and their implementation is suboptimal and slow (you have to train many models) and besides, there could be some common or shared patterns between the series that could be learned by modeling them together.\n",
     "\n",
-    "In order to address this problem there have been various efforts in proposing different methods that can train a single model on many time series. Some very interesting deep learning architectures have been designed that can accurately forecast many time series like ESRNN, DeepAR, NBEATS among others.\n",
+    "To address this problem, there have been various efforts in proposing different methods that can train a single model on many time series. Some fascinating deep learning architectures have been designed that can accurately forecast many time series like ESRNN, DeepAR, NBEATS among others. (Check [nixtlats](https://github.com/Nixtla/nixtlats) and [Replicating ESRNN results](https://nixtla.github.io/blog/deep%20learning/forecasting/m4/2021/06/25/esrnn-i.html) for our WIP)\n",
     "\n",
-    "Traditional machine learning models like gradient boosted trees have been used as well and have shown that they can achieve very good performance as well. However, using these models with lag-based features isn't very straightforward because you have to update your features in every timestep in order to compute the predictions. Additionally, depending on your forecasting horizon and the lags that you use, at some point you run out of real values of your series to update your features, so you have to do something to fill those gaps. One possible approach is using your predictions as the values for the serie and update your features using them, which is what **mlforecast** does."
+    "Traditional machine learning models like gradient boosted trees have been used as well and have shown that they can achieve very good performance as well. However, using these models with lag-based features isn't very straightforward because you have to update your features in every timestep in order to compute the predictions. Additionally, depending on your forecasting horizon and the lags that you use, at some point you run out of real values of your series to update your features, so you have to do something to fill those gaps. \n",
+    "One possible approach is using your predictions as the values for the series and update your features using them. This is exactly what **mlforecast** does for you."
    ],
    "metadata": {}
   },
@@ -60,7 +61,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the following section I'll show a very simple example with a single serie to highlight the difficulties in using machine learning models in forecasting tasks."
+    "In the following section I'll show a very simple example with a single series to highlight the difficulties in using machine learning models in forecasting tasks. This will later motivate te use of *mlforecast*, a library that makes the whole process easier and faster. "
    ],
    "metadata": {}
   },
@@ -312,7 +313,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We'll train a linear regression without intercept. Since the best model would be taking the average for each day of the week, we expect to get coefficients that are close to 0.5."
+    "For simplicity sake, we'll train a linear regression without intercept. Since the best model would be taking the average for each day of the week, we expect to get coefficients that are close to 0.5."
    ],
    "metadata": {}
   },
@@ -363,9 +364,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Great. So now that we have our trained model, how can we compute the forecasts for the next 14 days? Machine learning models a feature matrix *X* and output the predicted values *y*. So we need to create the feature matrix *X* for the next 14 days and give it to our model.\n",
+    "Great. We have our trained model. How can we compute the forecast for the next 14 days? Machine learning models a feature matrix *X* and output the predicted values *y*. So we need to create the feature matrix *X* for the next 14 days and give it to our model.\n",
     "\n",
-    "If we want to get the *lag-7* for the next day following the training set we can just get the value in the 7th position starting from the end. The *lag-7* two days after the end of the training set would be the value in the 6th position starting from the end and so on. Similarly for the *lag-14*."
+    "If we want to get the *lag-7* for the next day, following the training set, we can just get the value in the 7th position starting from the end. The *lag-7* two days after the end of the training set would be the value in the 6th position starting from the end and so on. Similarly for the *lag-14*."
    ],
    "metadata": {}
   },
@@ -731,7 +732,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "And now we have our forecasts for the next 14 days! This wasn't that painful but it wasn't pretty either. And we just used lags which are the easiest feature we can have because you just have to shift your data.\n",
+    "And now we have our forecasts for the next 14 days! This wasn't that painful but it wasn't pretty or easy either. And we just used lags which are the easiest feature we can have.\n",
     "\n",
     "What if we had used *lag-1*? We would have needed to do this predict-update step 14 times!\n",
     "\n",
@@ -749,7 +750,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "With these problems in mind I created [mlforecast](https://github.com/Nixtla/mlforecast), which is a framework to help you forecast time series using machine learning models. It takes care of all the details for you, you just need to give it a model and which features you want to use and let it do the rest.\n",
+    "With these problems in mind we created [mlforecast](https://github.com/Nixtla/mlforecast), which is a framework to help you forecast time series using machine learning models. It takes care of all these messy details for you. You just need to give it a model and define which features you want to use and let *mlforecast* do the rest.\n",
     "\n",
     "**mlforecast** is available in [PyPI](https://pypi.org/project/mlforecast/) (`pip install mlforecast`) as well as [conda-forge](https://anaconda.org/conda-forge/mlforecast) (`conda install -c conda-forge mlforecast`)"
    ],
@@ -758,7 +759,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The problem in the example can be solved using **mlforecast** with the following lines.\n",
+    "The previously described problem can be solved using **mlforecast** with the following code.\n",
     "\n",
     "First we have to set up our data in the required format."
    ],
@@ -1147,7 +1148,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Internally this did the same as we did before, which we can verify real quick.\n",
+    "This was a lot easier and internally this did the same as we did before. Lets verify real quick.\n",
     "\n",
     "Check that we got the same predictions:"
    ],
@@ -1199,14 +1200,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Easier experiments"
+    "### Experiments made easier"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Having this high level abstraction allows us to focus on defining the best features and model instead of worrying about implementation details. For example, we can try out different lags very easily:"
+    "Having this high level abstraction allows us to focus on defining the best features and model instead of worrying about implementation details. For example, we can try out different lags very easily by writing a simple function that leverages *mlforecast*:"
    ],
    "metadata": {}
   },
@@ -2201,16 +2202,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Summary"
+    "## TL;DR"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "In this post I presented **mlforecast**, a framework to use machine learning models in forecasting tasks. It allows you to focus on the model and features instead of implementation details. It has built-in backtesting to help you find the best performing model.\n",
+    "In this post we presented **mlforecast**, a framework that makes the use of machine learning models in forecasting tasks fast and easy. It allows you to focus on the model and features instead of implementation details. With *mlforecast* you can make experiemnts in an esasier way and it has a built-in backtesting functionality to help you find the best performing model.\n",
     "\n",
-    "Although this example contained only a single time serie it is able to handle thousands of them and is very efficient both time and memory wise."
+    "Although this example contained only a single time series it is able to handle thousands of them and is very efficient both time and memory wise."
    ],
    "metadata": {}
   },
