--- a/_notebooks/2021-11-23-Intro-statsforecast.ipynb
+++ b/_notebooks/2021-11-23-Intro-statsforecast.ipynb
@@ -122,7 +122,7 @@
    "id": "49c559e5-1ff7-4ec0-bab0-c93fd30b565a",
    "metadata": {},
    "source": [
-    "**statsforecast** is available in [PyPI](https://pypi.org/project/mlforecast/) (`pip install statsforecast`) as well as [conda-forge](https://anaconda.org/conda-forge/statsforecast) (`conda install -c conda-forge mlforecast`)"
+    "**statsforecast** is available in [PyPI](https://pypi.org/project/statsforecast/) (`pip install statsforecast`) as well as [conda-forge](https://anaconda.org/conda-forge/statsforecast) (`conda install -c conda-forge statsforecast`)"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "id": "95b5f04c-f59c-4415-aa71-4d868f6ed188",
    "metadata": {},
    "source": [
-    "The function `M5.load` returns train + test data, so we need to separate it."
+    "The function `M5.load` returns train + test data, so we need to separate them."
    ]
   },
   {
@@ -251,12 +251,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "efb6e9fd-9741-4b95-8180-0e76ce1fadfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30490,)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series.index.unique().shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bcad7c73-df9d-44bc-bd41-684bc95d64fa",
    "metadata": {},
    "source": [
     "This is the required input format.\n",
-    "* an index named **unique_id** that identifies each time serie. In this case we only have one but you can have as many as you want.\n",
+    "* an index named **unique_id** that identifies each time series. In this example, we have 30,490 time series.\n",
     "* a **ds** column with the dates.\n",
     "* a **y** column with the values.\n"
    ]
@@ -318,7 +339,7 @@
    "id": "08028495-8b30-48fc-b8ac-ed7b1c7990ca",
    "metadata": {},
    "source": [
-    "Now we define our trainer, `StatForecast`, where we define the models we want to use, the frequency of the data and the number of cores used to parallelize the training job.\n",
+    "Now we define our trainer, `StatsForecast`, where we define the models we want to use, the frequency of the data and the number of cores used to parallelize the training job.\n",
     "\n",
     "In this way adjusting these models and generating forecasts is as simple as the following lines."
    ]
